stow/xmonad/.xmonad/xmonad.errors

xmonad.hs:147:18: error:
    * Variable not in scope: controlMas :: KeyMask
    * Perhaps you meant `controlMask' (imported from XMonad)
    |
147 |              .|. controlMas , xK_space   ), spawn "$HOME/.bin/layout_switch.sh")
    |                  ^^^^^^^^^^
